# stats_alloc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  aliases.js  release.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
implementors/core/alloc/: trait.GlobalAlloc.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/stats_alloc/: trait.Reporter.js
spin/: all.html  index.html  struct.Mutex.html  struct.MutexGuard.html  struct.Once.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockWriteGuard.html
src/: lib.rs  region.rs  summary.rs
src/accum/: mod.rs  reporter.rs  rollup.rs  thread_local.rs
src/global_alloc/: instrumented.rs  mod.rs
src/lazy_static/: inline_lazy.rs.html  lib.rs.html
src/spin/: lib.rs.html  mutex.rs.html  once.rs.html  rw_lock.rs.html  util.rs.html
src/stats_alloc/: lib.rs.html  region.rs.html  summary.rs.html
stats_alloc/: INSTRUMENTED_SYSTEM.v.html  INSTRUMENTED_SYSTEM_WITH_1_SEC_ROLLUP.v.html  LocalAlwaysReport.t.html  LocalIntervalReport.t.html  NeverReport.t.html  Reporter.t.html  Rollup.t.html  StatsAlloc.t.html  THREAD_INSTRUMENTED_SYSTEM.v.html  all.html  index.html  sidebar-items.js  static.FULLY_INSTRUMENTED_SYSTEM.html  static.INSTRUMENTED_SYSTEM.html  static.INSTRUMENTED_SYSTEM_WITH_1_SEC_ROLLUP.html  static.THREAD_INSTRUMENTED_SYSTEM.html  struct.AlwaysReport.html  struct.Instrumented.html  struct.IntervalReport.html  struct.LocalAlwaysReport.html  struct.LocalIntervalReport.html  struct.NeverReport.html  struct.Region.html  struct.Rollup.html  struct.Stats.html  struct.StatsAlloc.html  struct.Summary.html  struct.ThreadStats.html  trait.Reporter.html
stats_alloc/region/: struct.Region.html
stats_alloc/summary/: struct.Summary.html
tests/: nightly.rs  nightly_thread_local.rs  test.rs  tests.rs
(+34 files in other folders)
