[package]
name = "stats_alloc"
version = "0.1.10"
authors = ["Marcus Griep <mgriep@griep.us>"]
description = "An allocator wrapper that allows for instrumenting global allocators"
keywords = ["alloc", "instrument", "stats"]
license = "MIT"
repository = "https://github.com/neoeinstein/stats_alloc"
documentation = "https://docs.rs/stats_alloc/"
readme = "README.md"
exclude = [
    ".gitignore",
    ".editorconfig",
    "release.toml",
    "rustfmt.toml",
    "tests/**/*",
]

[features]
default = []
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
spin = { version = "0.9", default-features = false, features = [ "spin_mutex" ] }
